Adjust layout and fix broken colors in header
I changed the body from a flexbox to a grid element and adjusted
margins and padding accordingly to clean up element spacing, and I
fixed the color properties in the header and box shadows that were
broken in light mode.

--- a/src/scss/components/_footer.scss
+++ b/src/scss/components/_footer.scss
@@ -3,5 +3,5 @@
 
 .footer {
   text-align: center;
-  padding-block: 20px;
+  margin-block: 35px;
 }
